log
Thu 05 Oct 2023 06:53:29 PM UTC: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
1c60857
Thu 05 Oct 2023 07:32:25 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b87ae41
Thu 05 Oct 2023 07:55:02 PM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:54:7: error: unused variable ‘arregloSubm’ [-Werror=unused-variable]
   54 |   int arregloSubm[10] = {};
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
28d7d93
Thu 05 Oct 2023 07:55:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3f7e9c0
Thu 05 Oct 2023 07:56:56 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
83f6e6a
Thu 05 Oct 2023 07:58:46 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
438c2e4
Thu 05 Oct 2023 08:01:43 PM UTC: 
 sudoku.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
9446921
Mon 09 Oct 2023 11:10:03 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
9d0ed69
